examples/test/testpolicy8107.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8107
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key17: value31
      key41: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value16
      podSelector:
        matchLabels:
          key48: value27
          key15: value41
